tests/ui/rfcs/rfc-2497-if-let-chains/edition-gate-macro-error.edition2021.stderr
error: let chains are only allowed in Rust 2024 or later
  --> $DIR/edition-gate-macro-error.rs:19:30
   |
LL |     macro_in_2021::make_if!((let Some(0) = None && let Some(0) = None) { never!() } { never!() });
   |                              ^^^^^^^^^^^^^^^^^^

error: let chains are only allowed in Rust 2024 or later
  --> $DIR/edition-gate-macro-error.rs:19:52
   |
LL |     macro_in_2021::make_if!((let Some(0) = None && let Some(0) = None) { never!() } { never!() });
   |                                                    ^^^^^^^^^^^^^^^^^^

error: let chains are only allowed in Rust 2024 or later
  --> $DIR/edition-gate-macro-error.rs:22:5
   |
LL |     macro_in_2021::make_if!(let (Some(0)) let (Some(0)) { never!() } { never!() });
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `macro_in_2021::make_if` (in Nightly builds, run with -Z macro-backtrace for more info)

error: let chains are only allowed in Rust 2024 or later
  --> $DIR/edition-gate-macro-error.rs:22:5
   |
LL |     macro_in_2021::make_if!(let (Some(0)) let (Some(0)) { never!() } { never!() });
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `macro_in_2021::make_if` (in Nightly builds, run with -Z macro-backtrace for more info)

error: let chains are only allowed in Rust 2024 or later
  --> $DIR/edition-gate-macro-error.rs:26:30
   |
LL |     macro_in_2024::make_if!((let Some(0) = None && let Some(0) = None) { never!() } { never!() });
   |                              ^^^^^^^^^^^^^^^^^^

error: let chains are only allowed in Rust 2024 or later
  --> $DIR/edition-gate-macro-error.rs:26:52
   |
LL |     macro_in_2024::make_if!((let Some(0) = None && let Some(0) = None) { never!() } { never!() });
   |                                                    ^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

